--- a/src/assets/Css/previsao/SecaoBarPrevisao.css
+++ b/src/assets/Css/previsao/SecaoBarPrevisao.css
@@ -44,3 +44,30 @@
   font-size: 18px;
   color: #000;
 }
+
+.suggestions-list {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  max-height: 200px;
+  overflow-y: auto;
+  background-color: #f5dcdc;
+  border: 1px solid #ccc;
+  border-top: none;
+  border-radius: 21px;
+  z-index: 1000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 5px;
+  list-style-type: none;
+}
+
+.suggestions-list li {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  text-align: center;
+  margin-left: -9%;
+}
+
+
